# prop-intelli-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
docker/: Dockerfile.python  Dockerfile.streamlit
docs/: architecture.md  data_model.md  error_catalog.md  evaluation.md  prompt_engineering.md  use_case.md  use_case_DE.md
sample_data/ground_truth/: expose_01_nuernberg_eigentumswohnung.json  expose_02_muenchen_altbau.json  expose_03_fuerth_reihenhaus_sparse.json  expose_04_berlin_neubau.json  expose_05_hamburg_villa.json  expose_06_leipzig_dachgeschoss.json  expose_07_nuernberg_mietwohnung.json  expose_08_stuttgart_penthouse.json  expose_09_dresden_bungalow.json  expose_10_koeln_loft.json  expose_11_dresden_warmmiete.json  expose_12_essen_neubau.json  expose_13_hannover_altbau.json
sample_data/holdout/ground_truth/: holdout_01_karlsruhe_reihenhaus.json  holdout_02_freiburg_etagenwohnung.json  holdout_03_potsdam_villa.json
scripts/: generate_sample_exposes.py
services/IngestionApi/: Dockerfile  IngestionApi.csproj  Program.cs  README.md  appsettings.json
services/IngestionApi.Tests/: ApiTests.cs  IngestionApi.Tests.csproj  PropertyValidatorTests.cs
services/IngestionApi/Endpoints/: ApiEndpoints.cs
services/IngestionApi/Models/: Contracts.cs
services/IngestionApi/Services/: FileDocumentStore.cs  PropertyValidator.cs
src/propintelli/: __init__.py  cli.py  comparison.py  confidence.py  config.py  errors.py  logging_setup.py  pipeline.py
src/propintelli/batch/: __init__.py  runner.py
src/propintelli/evaluation/: __init__.py  evaluate.py
src/propintelli/extraction/: __init__.py  deterministic.py  engine.py  reconciliation.py  vocabulary.py
src/propintelli/extraction/llm/: __init__.py  base.py  none_provider.py  ollama_provider.py  openai_provider.py  prompts.py
src/propintelli/ingestion/: __init__.py  document_store.py
src/propintelli/preprocessing/: __init__.py  pdf_classifier.py  text_extractor.py
src/propintelli/sampledata/: __init__.py  generator.py  holdout.py
src/propintelli/schemas/: __init__.py  enums.py  extraction.py  fields.py  property_record.py
src/propintelli/storage/: __init__.py  gold.py  models.py  repository.py
src/propintelli/transformation/: __init__.py  assembler.py  normalize.py  parsing.py
src/propintelli/validation/: __init__.py  rules.py
tests/: conftest.py  test_batch.py  test_cli.py  test_confidence.py  test_evaluation.py  test_extraction.py  test_llm.py  test_pipeline.py  test_preprocessing.py  test_sampledata.py  test_schemas.py  test_storage.py  test_streamlit_app.py  test_transformation.py  test_validation.py
