[project]
name = "propintelli"
version = "0.1.0"
description = "Document Intelligence & Data Extraction Platform for real-estate exposes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faruk Ahraman" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "sqlalchemy>=2.0",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "reportlab>=4.2",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17"]
llm = ["openai>=1.40", "httpx>=0.27"]
ui = ["streamlit>=1.37", "pandas>=2.2"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
]

[project.scripts]
propintelli = "propintelli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/propintelli"]

# ----------------------------------------------------------------------------
# Ruff: formatter + linter. NumPy docstring convention is mandatory on the
# public API surface (the `src` package); tests and scripts are exempt from
# docstring/annotation noise so they stay readable.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (NumPy convention)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = [
    "D203",  # conflicts with D211 (no blank line before class docstring)
    "D213",  # conflicts with D212 (multi-line summary on first line)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "N802", "N803", "N806"]
"scripts/**" = ["D"]
"app/**" = ["D"]

# ----------------------------------------------------------------------------
# Mypy: strict static typing on the package. Third-party libraries without
# bundled type information are explicitly allow-listed so strict mode stays
# meaningful for our own code.
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_no_return = true
show_error_codes = true
pretty = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "fitz",
    "pdfplumber",
    "pdfplumber.*",
    "duckdb",
    "reportlab.*",
    "pytesseract",
    "pdf2image",
    "streamlit",
    "pandas",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest + coverage
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["propintelli"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
